# jdnsbench

./: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
.github/workflows/: app.yml  natives.yml
app/: build.gradle.kts
app/src/main/java/io/github/wasabithumb/jdnsbench/: Main.java
app/src/main/java/io/github/wasabithumb/jdnsbench/asset/: AppResources.java
app/src/main/java/io/github/wasabithumb/jdnsbench/gui/: MainWindow.java
app/src/main/java/io/github/wasabithumb/jdnsbench/gui/asset/: UIAsset.java  UIAssetState.java  UIAssetType.java  UIAssets.java
app/src/main/java/io/github/wasabithumb/jdnsbench/tui/: TUI.java  TUIArrowKey.java  TUIContext.java  TUIWorker.java
app/src/main/java/io/github/wasabithumb/jdnsbench/util/: AnsiUtil.java  JoinedCharSequence.java
app/src/main/resources/data/: countries.csv
core/: build.gradle.kts
core/src/main/java/io/github/wasabithumb/jdnsbench/api/: JDNS.java  JDNSException.java  JDNSResult.java
core/src/main/java/io/github/wasabithumb/jdnsbench/asset/: CoreResources.java
core/src/main/java/io/github/wasabithumb/jdnsbench/jni/: JNI.java  JNIQueryCallback.java  JNISystemLibraries.java
core/src/main/java/io/github/wasabithumb/jdnsbench/util/: CSVReader.java  IPUtil.java  ReflectUtil.java  SystemUtil.java
core/src/main/resources/data/: default_servers.csv
gradle/wrapper/: gradle-wrapper.properties
natives/: build.gradle.kts
natives/src/: CMakeLists.txt
natives/src/headers/: api.h  logging.h  main.h
natives/src/main/: api_linux.c  api_win32.c  logging.c  main.c
(+44 files in other folders)
